# SceneWorks

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODEGRAPH.md  CODE_REVIEW_2026-05-17.md  CODE_REVIEW_2026-05-17_VERIFICATION.md  Cargo.toml  README.md  docker-compose.yml  package.json  pytest.ini
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  desktop-candle-windows.yml  desktop-windows.yml  macos-mlx.yml  release.yml  server-candle-linux.yml  windows-candle.yml
apps/api/: README.md  requirements.txt
apps/desktop/: Cargo.toml  Entitlements.plist  README.md  build.rs  package-lock.json  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/permissions/autogenerated/: choose_data_dir.toml  choose_folder.toml  complete_setup.toml  delete_credential.toml  get_app_settings.toml  get_gpu_info.toml  get_session_logs.toml  get_storage_setup.toml  list_credentials.toml  reset_setup.toml  resolve_asset_path.toml  restart_worker.toml  reveal_in_os.toml  save_asset_as.toml  save_storage_setup.toml  set_credential.toml  set_data_dir.toml  start_setup.toml
apps/desktop/scripts/: build-sidecar.mjs  build-update-manifest.mjs  fetch-uv.mjs  stage-python.mjs  stage-test-sidecars.mjs
apps/desktop/src/: cuda_provision.rs  main.rs  settings.rs  setup.rs  update.rs
apps/desktop/ui/: index.html
apps/rust-api/: Cargo.toml  README.md
apps/rust-api/src/: assets.rs  auth.rs  characters.rs  credentials.rs  dto.rs  events.rs  face_likeness.rs  generation.rs  jobs.rs  lib.rs  logs.rs  loras.rs  main.rs  manifest.rs  models.rs  person.rs  poses.rs  preferences.rs  projects.rs  prompts.rs  recipe_presets.rs  tests.rs  tickets.rs  timelines.rs  training.rs  workers.rs
apps/rust-worker/: Cargo.toml
apps/rust-worker/src/: lib.rs  main.rs
crates/sceneworks-core/: Cargo.toml  README.md
crates/sceneworks-core/src/: asset_index.rs  character_store.rs  contracts.rs  credentials.rs  dataset_quality.rs  hf_home.rs  image_request.rs  jobs_store.rs  jsonc.rs  lib.rs  lora_family.rs  lora_url.rs  media_convert.rs  observability.rs  payload_util.rs  project_store.rs  session_log.rs  slug.rs  store_util.rs  time.rs  training.rs  training_store.rs  video_request.rs
crates/sceneworks-core/tests/: character_store.rs  contract_roundtrip.rs  jobs_store.rs  python_live_contracts.rs  training_contracts.rs
crates/sceneworks-image-quality/: Cargo.toml
crates/sceneworks-image-quality/assets/: README.md  aesthetic-v2-sac-logos-ava1-l14.safetensors
crates/sceneworks-image-quality/src/: lib.rs  transform.rs
crates/sceneworks-worker/: Cargo.toml  VALIDATION.md
crates/sceneworks-worker/src/: advanced.rs  caption_jobs.rs  chroma1_base_q4_mlx_smoke.rs  dataset_analysis_jobs.rs  depth.rs  downloads.rs  engines.rs  face_likeness.rs  face_likeness_compare_jobs.rs  flux2_dev_gpu_smoke.rs  footprint_measure.rs  generator_cache.rs  gpu.rs  ideogram_caption.rs  ideogram_image_caption_v1.txt  image_decode.rs  image_jobs.rs  kps_jobs.rs  krea_turbo_mlx_smoke.rs  lens_base_q4_mlx_smoke.rs  lib.rs  lora_eval_harness.rs  lora_train_driver.rs  manifest.rs  media_jobs.rs  model_jobs.rs  openpose_skeleton.rs  paths.rs  person_jobs.rs  person_replace.rs  person_segment.rs  person_segment_sam3.rs  person_segment_sam3_candle.rs  person_track.rs  pose_jobs.rs  progress.rs  prompt_refine_jobs.rs  realvisxl_lightning_gpu_smoke.rs  scail2_gpu_smoke.rs  scail2_masks.rs  (+8 more)
crates/sceneworks-worker/src/image_jobs/: base.rs  bernini.rs  detail.rs  flux1_control_candle.rs  flux2.rs  flux2_control_candle.rs  flux2_edit_candle.rs  flux_ipadapter.rs  instantid.rs  kolors.rs  kolors_control.rs  kolors_ipadapter.rs  pid.rs  pulid.rs  pulid_candle.rs  qwen.rs  qwen_control.rs  qwen_edit_candle.rs  sdxl.rs  sdxl_edit_candle.rs  sdxl_ipadapter.rs  sensenova.rs  stream.rs  strict_control.rs  tests.rs  zimage.rs  zimage_control.rs  zimage_edit_candle.rs  zimage_identity_candle.rs
crates/sceneworks-worker/src/person_jobs/: tests.rs
crates/sceneworks-worker/src/person_track/: tests.rs
crates/sceneworks-worker/src/pose_jobs/: tests.rs
crates/sceneworks-worker/src/segment_jobs/: tests.rs
crates/sceneworks-worker/src/upscale_jobs/: tests.rs
crates/sceneworks-worker/tests/: nax_guard.rs
docker/: api.Dockerfile  rust-api.Dockerfile  rust-worker.Dockerfile  rust.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: mac-rust-gaps.md  observability.md  rust-mlx-build.md  sc-3633-mlx-port.md
documents/: EPIC_NATIVE_LTX23_VIDEO_ADAPTER.md  EPIC_TRAINING_PRESETS.md  GOAL_OBSERVABILITY_FOUNDATIONS.md  IMAGE_MODEL_FEASIBILITY_MATRIX.md  IMAGE_MODEL_RESEARCH.md  IMPLEMENTATION_PLAN.md  MULTI_MODEL_REFERENCE_CONDITIONING.md  REPLACE_PERSON_RESEARCH.md  RESEARCH_DECISION_LOG.md  SCENEWORKS_PLAN.md  TIMELINE_LIBRARY_RESEARCH.md  TRAINING_QUICKSTART.md  VIDEO_MODEL_RESEARCH.md
scripts/: check-compose-config.mjs  check-docker-api-runtime.mjs  check-gen-core-skew.sh  check-health.mjs  check-scaffold.mjs  convert_scail2_dpo_lora.py  export-rust-live-contracts.py  smoke-lens.ps1  sync-version.mjs
scripts/spikes/sc3489_ort_upscale/: Cargo.toml
scripts/spikes/sc3489_ort_upscale/src/: upscale.rs
scripts/spikes/sc3635_ort_sam2/: Cargo.toml
scripts/spikes/sc3635_ort_sam2/src/: sam2.rs
tests/: test_assets.py  test_convert_scail2_dpo_lora.py  test_face_likeness_adapters.py  test_instantid_adapter.py  test_jobs_store.py  test_lycoris_lokr.py  test_mlx_sidecar_failure_detail.py  test_mlx_sidecar_stream.py  test_models.py  test_person_adapters.py  test_person_tracking.py  test_pose_adapters.py  test_project_index.py  test_pulid_flux_adapter.py  test_python_rust_api_parity.py  test_rust_api_contract_snapshots.py  test_rust_api_worker_smoke.py  test_rust_migration_contract_fixtures.py  test_sampler_registry.py  test_timelines.py  test_video_adapters_ffmpeg_shim.py  test_worker_image_adapters.py  test_worker_lora_adapters.py  test_worker_runtime.py  test_worker_training.py  test_worker_video_adapters.py  worker_runtime_shared.py
(+301 files in other folders)
