[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "apps/rust-api",
    "apps/rust-worker",
    "crates/sceneworks-core",
    "crates/sceneworks-worker",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
