[package]
name = "sceneworks-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# SceneWorks desktop shell (Tauri v2). Hosts the native webview (WebView2 on
# Windows, WebKit on macOS) and, from sc-1346, manages the sceneworks-api and
# Python inference sidecars.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[target.'cfg(unix)'.dependencies]
# SIGTERM the Python worker / API sidecar for graceful shutdown before force-kill.
nix = { version = "0.29", default-features = false, features = ["signal"] }

[lints.rust]
# Tauri's generate_context!/Builder can emit unsafe at the webview FFI boundary,
# so the workspace-wide forbid(unsafe_code) is relaxed for this GUI shell crate
# only. All other crates keep the forbid.
unsafe_code = "allow"

[lints.clippy]
all = "warn"
