[package]
name = "sceneworks-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# SceneWorks desktop shell (Tauri v2). Hosts the native webview (WebView2 on
# Windows, WebKit on macOS) and manages the sceneworks-api sidecar + the native
# GPU worker (MLX on macOS, candle/CUDA off-Mac). The Python inference worker was
# retired off-Mac in sc-5563 (Phase 7), matching the macOS MLX-only cutover.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Cross-platform network-interface enumeration for the LAN remote-access URL
# (epic 4484, story 5): lists adapters with their IPs on macOS AND Windows, so the
# desktop can offer a likely private LAN address. Small, std-only deps under the hood.
if-addrs = "0.13"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# In-app session log buffer (sc-3451): shared LogEntry/SessionLog types.
sceneworks-core = { path = "../../crates/sceneworks-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured logging for the shell's own lifecycle events (e.g. auto-update,
# sc-1355). The subscriber is installed in main() via init_logging(); the sidecars
# log separately through the session-log ring buffer.
tracing = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# Cross-platform in-app auto-updater (sc-1355). Checks the GitHub "latest release"
# pointer (plugins.updater.endpoints in tauri.conf.json), verifies the minisign
# signature against plugins.updater.pubkey, and installs/restarts on user accept.
# Driven from the Rust shell (update.rs) — no JS/ACL surface since the UI is the
# loopback-served React app at a remote origin.
tauri-plugin-updater = "2"

[target.'cfg(unix)'.dependencies]
# SIGTERM the Python worker / API sidecar for graceful shutdown before force-kill.
nix = { version = "0.29", default-features = false, features = ["signal"] }

[target.'cfg(windows)'.dependencies]
# First-run CUDA/onnxruntime redist downloader (cuda_provision.rs): the heavy GPU
# runtime DLLs are no longer bundled (NSIS ~2 GB limit) — they're fetched on first run
# from pinned PyPI wheels (zips), sha256-verified, and unzipped into %APPDATA%. Feature
# sets match the workspace's existing reqwest/zip/sha2 so no new locked versions appear.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[lints.rust]
# Tauri's generate_context!/Builder can emit unsafe at the webview FFI boundary,
# so the workspace-wide forbid(unsafe_code) is relaxed for this GUI shell crate
# only. All other crates keep the forbid.
unsafe_code = "allow"

[lints.clippy]
all = "warn"
