[package]
name = "sceneworks-rust-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sceneworks-core = { path = "../../crates/sceneworks-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
