[package]
name = "sceneworks-rust-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
fs2 = "0.4"
futures-util = "0.3"
glob = "0.3"
parking_lot = "0.12"
mime_guess = { version = "2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { version = "8", features = ["debug-embed"], optional = true }
sceneworks-core = { path = "../../crates/sceneworks-core" }
# Tier-0 dataset-quality pixel extraction for the readiness endpoint (sc-6533). GPU-free
# (image/imageproc/image_hasher), so it does not add to the worker/MLX build surface.
sceneworks-image-quality = { path = "../../crates/sceneworks-image-quality" }
sceneworks-worker = { path = "../../crates/sceneworks-worker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }

# Unix-only: parent-death watchdog liveness probe (safe kill(pid, None) wrapper).
# Mirrors the desktop crate; the workspace forbids `unsafe`, so we use nix rather
# than raw libc. Already in the workspace lock, so this pulls no new crate.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

# Embed the built apps/web/dist bundle into the binary and serve it with SPA
# fallback. Off by default (server/test builds need no web build); the desktop
# release pipeline runs `npm --prefix apps/web run build` then enables this.
[features]
embed-web = ["dep:rust-embed", "dep:mime_guess"]
# Opt-in passthrough to sceneworks-worker's candle (Windows/CUDA) backend so the
# desktop sidecar (this binary) can be built candle-enabled — `--features
# embed-web,backend-candle`. Off by default: the plain desktop/server build (no
# CUDA toolkit, windows-latest CI, macOS) resolves WITHOUT candle/cudarc/nvcc,
# exactly as sceneworks-worker keeps it out of its default set. Linking does NOT
# enable candle at runtime — that is the `backend_candle_enabled` setting (sc-5561).
# See crates/sceneworks-worker/Cargo.toml's `backend-candle` for the providers it
# pulls. (sc-5559)
backend-candle = ["sceneworks-worker/backend-candle"]

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }
# Encode real test images for the synchronous image-fix round-trips (sc-6539).
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
