[package]
name = "sceneworks-rust-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
futures-util = "0.3"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sceneworks-core = { path = "../../crates/sceneworks-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
axum = "0.7"
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
