[package]
name = "sceneworks-rust-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Thin binary wrapper around the sceneworks-worker library crate. All job
# logic lives in crates/sceneworks-worker so it can also be embedded in-process
# by the Rust API (sc-1342); this binary remains the Docker/server entry point.

[dependencies]
sceneworks-worker = { path = "../../crates/sceneworks-worker" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
