[package]
name = "sceneworks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.13"

[features]
python-live = []

[lints]
workspace = true
