[package]
name = "sceneworks-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
futures-util = "0.3"
glob = "0.3"
nix = { version = "0.29", default-features = false, features = ["process", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sceneworks-core = { path = "../sceneworks-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
axum = "0.7"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
